--- a/basic_types.css
+++ b/basic_types.css
@@ -10,6 +10,14 @@
 	clear: both;
 }
 
+#basic_types-form .col-6 {
+	width: 16.666%;
+}
+
+#basic_types-form .col-5 {
+	width: 20%;
+}
+
 #basic_types-form .col-4 {
 	width: 25%;
 }
@@ -158,7 +166,6 @@
 	border: 1px solid #ddd;
 	margin-top: 4px;
 	margin-right: 15px;
-	height: 60vh;
 }
 
 /* eof */
